--- a/index.html
+++ b/index.html
@@ -82,13 +82,8 @@
             const depositNumber = getInputNumber("depositAmount");
 
 
-
-            // Deposit & Balance related code Start
-
             updateSpanText("currentDeposit", depositNumber);
             updateSpanText("currentBalance", depositNumber);
-
-            // Deposit & Balance related code End
 
             document.getElementById("depositAmount").value = "";
         })
@@ -98,14 +93,10 @@
         withdrawBtn.addEventListener("click", function(){
             const withdrawNumber = getInputNumber("withdrawAmount");
 
-            console.log("withdrawNumber");
+            updateSpanText("currentWithdraw", withdrawNumber);
+            updateSpanText("currentBalance", -1 * withdrawNumber);
 
-            // git put push part First Time
-
-            // updateSpanText("currentWithdraw", withdrawNumber);
-            // updateSpanText("currentBalance", -1 * withdrawNumber);
-
-            // document.getElementById("withdrawAmount").value = "";
+            document.getElementById("withdrawAmount").value = "";
         })
 
         function getInputNumber(id){
@@ -116,10 +107,10 @@
 
 
 
-        function updateSpanText (id, depositNumber){
+        function updateSpanText (id, addedNumber){
             const current = document.getElementById(id).innerText;
             const currentNumber = parseFloat(current);
-            const totalAmount = depositNumber + currentNumber;
+            const totalAmount = addedNumber + currentNumber;
             document.getElementById(id).innerText = totalAmount;
         }
 
